fixing css changes not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,6 @@ p {
 }
 
 .benefits {
-    margin-bottom: 50px;
     margin-right: 20px;
     padding: 20px;
     clear: both;
